src/assets/styles/components/_modal.scss
// Modals //
@import '../variables';

.modal-content {
  background-color: unset;
}

#AccountModal {
  .modal-dialog-scrollable .modal-content {
    max-height: 100vh;
  }
  .custom-select {
    background: $arc-clr-white;
  }
  @media (min-width: 992px) {
    .modal-lg {
      max-width: 1179px;
    }
  }
  @media (max-width: 576px) {
    .modal-dialog-scrollable > .modal-content {
      height: 100vh !important;
      max-height: 100vh !important;
    }
  }
}
.auth-modal {
  &-header {
    padding: 24px 24px 24px 30px;
    box-shadow: inset 0 1px 0 0 rgba(255,255,255, .11);
  }
  &-content {
    padding: 50px 80px;
    background-color: $arc-clr-soil-dark;
    &-mobile {
      padding: 30px 24px;
      background-color: $arc-clr-soil-dark;
    }
  }
  &-body {
    padding: 0 14px 14px 14px;
  }
  &-dialog {
    margin: .5rem;
    &-mobile {
      margin: 0;
    }
  }
}

@media (min-width: 576px) {
  #AuthModal .modal-dialog {
    max-width: 564px;
  }

  #ConnectionModal .modal-dialog {
    max-width: 564px;
  }

}
.profile-modal {
  &-header {
    height: 80px;
    padding: 26px 24px;
    box-shadow: inset 0 1px 0 0 rgba(255,255,255, .11);
    font-size: 21px;
  }
  &-sidebar {
    letter-spacing: .02em;
    padding: 0;
    flex: 0 0 330px;
    background: $arc-clr-soil-dark;
    &-inner {
      position: fixed;
      width: 330px;
    }
  }
}
#ConnectionModal {
  .modal-content {
    height: 100vh;
    width: 100vw;
  }
  .modal-body {
    background: linear-gradient(180deg, $black 0%, $arc-clr-soil-light 100%);
    opacity: .8;
  }
}

